@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2014 Thales Global Services S.A.S.
+ * Copyright (c) 2014, 2016 Thales Global Services S.A.S.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -10,10 +10,7 @@
  ******************************************************************************/
 package org.polarsys.kitalpha.ad.viewpoint.dsl.cs.text.ui.contentassist;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 import org.eclipse.emf.common.util.URI;
@@ -22,9 +19,6 @@ import org.eclipse.jface.text.templates.SimpleTemplateVariableResolver;
 import org.eclipse.jface.text.templates.TemplateContext;
 import org.eclipse.xtext.EcoreUtil2;
 import org.eclipse.xtext.ui.editor.templates.XtextTemplateContext;
-import org.polarsys.kitalpha.ad.viewpoint.dsl.as.activityexplorer.model.ViewpointActivityExplorer.Activity;
-import org.polarsys.kitalpha.ad.viewpoint.dsl.as.activityexplorer.model.ViewpointActivityExplorer.Page;
-import org.polarsys.kitalpha.ad.viewpoint.dsl.as.activityexplorer.model.ViewpointActivityExplorer.Section;
 import org.polarsys.kitalpha.ad.viewpoint.dsl.as.activityexplorer.model.ViewpointActivityExplorer.ViewpointActivityExplorer;
 
 
@@ -133,14 +127,15 @@ public class ActivityExplorerTemplateVariableResolver extends CommonTemplateVari
 	private static String computeId(TemplateContext context, boolean increment, String prefix, Map<URI, Long> map)
 	{
 		Long index = computeIndex(context, increment, map);
-		return prefix + String.valueOf(index);
+		return prefix + index;
 	}
 	
 	private static Long computeIndex(TemplateContext context, boolean increment, Map<URI, Long> map)
 	{
 		
-		if (map == null)
-			return new Long(0); //This for avoid throwing exception.
+		if (map == null) {
+			return Long.valueOf(0); //This for avoid throwing exception.
+		}
 		
 		XtextTemplateContext xTemplateContext = (XtextTemplateContext)context;
 		EObject model = xTemplateContext.getContentAssistContext().getCurrentModel();
@@ -148,7 +143,7 @@ public class ActivityExplorerTemplateVariableResolver extends CommonTemplateVari
 		Long index = map.get(uri);
 		
 		if (index == null) {
-			index = new Long(0);
+			index = Long.valueOf(0);
 			map.put(uri, index);
 		}
 		
@@ -163,75 +158,14 @@ public class ActivityExplorerTemplateVariableResolver extends CommonTemplateVari
 	
 	public static void initIdenxes(TemplateContext context)
 	{
-		
 			XtextTemplateContext xTemplateContext = (XtextTemplateContext)context;
 			ViewpointActivityExplorer model = (ViewpointActivityExplorer)EcoreUtil2.getRootContainer(xTemplateContext.getContentAssistContext().getCurrentModel());
 			URI uri = EcoreUtil2.getNormalizedResourceURI(model);
 		if (updateMaps.get(uri) == null || updateMaps.get(uri)){ //Interpreted that the templates needs to be updated
-
-			//Long pageIndex = getLastIndex(null); //model.getOwnedNewPages());
-			pageIndexes.put(uri, (long) 1);//pageIndex);
-
-//			Long sectionIndex = getLastIndex(model.getOwnedSectionsExtension());
-			sectionIndexes.put(uri, (long) 1);//sectionIndex);
-
-//			Long activityIndex = getLastIndex(model.getOwnedActivitiesExtension());
-			activityIndexes.put(uri, (long) 1);//activityIndex);
+			pageIndexes.put(uri, (long) 1);
+			sectionIndexes.put(uri, (long) 1);
+			activityIndexes.put(uri, (long) 1);
 			updateMaps.put(uri, false);
 		}
 	}
-	
-	
-	private static Long getLastIndex(Page pages) {
-		List<Long> indexes = new ArrayList<Long>();
-
-		if (pages != null){
-			//EList<Page> newPages = pages.getOwnedActivityExplorerPages();
-
-//			for (Page page : newPages) {
-//				long i = page.getIndex();
-//				indexes.add(i);
-//			}
-
-			Collections.sort(indexes);
-			Collections.reverse(indexes);
-		}
-		return indexes.isEmpty()? new Long(0) : indexes.get(0);
-	}
-	
-	private static Long getLastIndex(Section sections) {
-		List<Long> indexes = new ArrayList<Long>();
-		
-		if (sections != null){
-			//EList<SectionExtension> newSection = sections.getOwnedSectionsExtensions();
-
-//			for (SectionExtension sectionExtension : newSection) {
-//				long i = sectionExtension.getIndex();
-//				indexes.add(i);
-//			}
-
-			Collections.sort(indexes);
-			Collections.reverse(indexes);
-		}
-		return indexes.isEmpty()? new Long(0) : indexes.get(0);
-	}
-	
-	private static Long getLastIndex(Activity activities) {
-		
-		List<Long> indexes = new ArrayList<Long>();
-
-		if (activities != null){
-			//EList<ActivityExtension> newActivities = activities.getOwnedActivitiesExtensions();
-
-//			for (ActivityExtension activityExtension : newActivities) {
-//				long i = activityExtension.getIndex();
-//				indexes.add(i);
-//			}
-
-			Collections.sort(indexes);
-			Collections.reverse(indexes);
-		}
-		return indexes.isEmpty()? new Long(0) : indexes.get(0);
-	}
-
 }
